adding some assets and working on sending otp screen

--- a/app.json
+++ b/app.json
@@ -30,7 +30,7 @@
     "plugins": ["expo-router"],
     "experiments": {
       "typedRoutes": true,
-      "tsconfigpaths": true
+      "tsconfigPaths": true
     }
   }
 }
